# nodc-dyntaxa

./: README.md  pyproject.toml
src/nodc_dyntaxa/: __init__.py  dyntaxa_taxon.py  dyntaxa_whitelist.py  red_list_species.py  translate_dyntaxa.py
src/nodc_dyntaxa/CONFIG_FILES/: dyntaxa_whitelist.txt  red_list_species.txt  translate_to_dyntaxa.txt
