[project]
name = "nodc-dyntaxa"
version = "0.1.0"
description = "Find taxon ID from dyntaxa"
authors = [
    {name = "Magnus Wenzer", email = "magnus.wenzer@smhi.se"},
]
dependencies = [
    "requests>=2.31.0",
    "polars>=1.26.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["."]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
